--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,28 @@
-.button-succsess {
+.header {
+  border-top: 1px solid tomato;
+  border-bottom: 1px solid tomato;
+  min-height: 80px;
+  margin-bottom: 20px;
+}
+
+.section {
+  border-top: 1px solid green;
+  border-bottom: 1px solid green;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.btn {
+  padding: 13.3333333333px 40px;
+  font-size: 13.3333333333px;
+  border-radius: 20px;
+  background-color: #0056b3;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.button-error, .button-succsess {
   display: inline-flex;
   border-radius: 3px;
   font-size: 16px;
