--- a/scss/components/_each.scss
+++ b/scss/components/_each.scss
@@ -1,20 +1,2 @@
-// .button {
-//   display: inline-flex;
-//   border-radius: 3px;
-//   font-size: 16px;
-//   padding: 11px 20px;
-//   color: wheat;
-//   background-color: gray;
-// }
-
-// .button-succsess{
-// @extend .button;
-// background-color: green;
-// color: blue;
-// }
-
-// .button-error{
-// @extend .button;
-// background-color: red;
-// }
+@each 
 
